--- a/package.json
+++ b/package.json
@@ -5,13 +5,19 @@
         "ng": "ng",
         "start": "ng serve",
         "build": "ng build --prod",
-        "server:serve": "tsc-watch --outDir ./server --onSuccess \"node ./server/server.js\" --onFailure \"echo Beep! Compilation Failed\" --compiler typescript/bin/tsc -p tsconfig.server.json",
+        "build:ssr": "ng run angular-graphql:server:production",
+        "build:all": "npm run build && npm run build:ssr",
+        "server:serve": "tsc-watch --outDir ./server --onSuccess \"node ./server/server.js\" --onFailure \"echo Beep! Compilation Failed\" --compiler typescript/bin/tsc -p tsconfig.apollo-server.json",
         "test": "ng test",
         "lint": "ng lint",
         "e2e": "ng e2e",
         "gen": "apollo-codegen introspect-schema http://localhost:4000 --output ./src/app/types",
         "apollo:gen": "graphql-codegen --config codegen.yml",
-        "apollo:gen:a": "graphql-codegen --config codegen-angular.yml"
+        "apollo:gen:a": "graphql-codegen --config codegen-angular.yml",
+        "compile:server": "webpack --config webpack.server.config.js --progress --colors",
+        "serve:ssr": "node dist/server",
+        "serve:ssr:ts": "./node_modules/.bin/ts-node -P ./tsconfig.server.json ./server.ts",
+        "build:client-and-server-bundles": "ng build --prod && ng run angular-graphql:server:production --bundleDependencies all"
     },
     "private": true,
     "dependencies": {
@@ -22,14 +28,18 @@
         "@angular/forms": "~8.0.0",
         "@angular/platform-browser": "~8.0.0",
         "@angular/platform-browser-dynamic": "~8.0.0",
+        "@angular/platform-server": "~8.0.0",
         "@angular/router": "~8.0.0",
         "@graphql-codegen/introspection": "^1.2.0",
+        "@nguniversal/express-engine": "^8.1.1",
+        "@nguniversal/module-map-ngfactory-loader": "8.1.1",
         "apollo-angular": "^1.6.0",
         "apollo-angular-link-http": "^1.6.0",
         "apollo-cache-inmemory": "^1.3.2",
         "apollo-client": "^2.6.0",
         "apollo-link": "^1.2.11",
         "apollo-server": "^2.6.1",
+        "express": "^4.15.2",
         "graphql-tag": "^2.10.0",
         "rxjs": "~6.4.0",
         "tsc-watch": "^2.2.1",
@@ -57,11 +67,13 @@
         "karma-jasmine": "~2.0.1",
         "karma-jasmine-html-reporter": "^1.4.0",
         "protractor": "~5.4.0",
+        "ts-loader": "^5.2.0",
         "ts-node": "~7.0.0",
         "tslint": "~5.15.0",
         "typescript": "~3.4.3",
         "@graphql-codegen/typescript": "1.2.0",
         "@graphql-codegen/typescript-operations": "1.2.0",
-        "@graphql-codegen/typescript-apollo-angular": "1.2.0"
+        "@graphql-codegen/typescript-apollo-angular": "1.2.0",
+        "webpack-cli": "^3.1.0"
     }
 }
