--- a/package.json
+++ b/package.json
@@ -4,10 +4,12 @@
     "scripts": {
         "ng": "ng",
         "start": "ng serve",
+        "serve:ssr": "node dist/server",
+        "serve:ssr:ts": "./node_modules/.bin/ts-node -P ./tsconfig.server.json ./server.ts",
+        "serve:gql": "tsc-watch --outDir ./server --onSuccess \"node ./server/server.js\" --onFailure \"echo Beep! Compilation Failed\" --compiler typescript/bin/tsc -p tsconfig.apollo-server.json",
         "build": "ng build --prod",
         "build:ssr": "ng run angular-graphql:server:production",
         "build:all": "npm run build && npm run build:ssr",
-        "server:serve": "tsc-watch --outDir ./server --onSuccess \"node ./server/server.js\" --onFailure \"echo Beep! Compilation Failed\" --compiler typescript/bin/tsc -p tsconfig.apollo-server.json",
         "test": "ng test",
         "lint": "ng lint",
         "e2e": "ng e2e",
@@ -15,8 +17,6 @@
         "apollo:gen": "graphql-codegen --config codegen.yml",
         "apollo:gen:a": "graphql-codegen --config codegen-angular.yml",
         "compile:server": "webpack --config webpack.server.config.js --progress --colors",
-        "serve:ssr": "node dist/server",
-        "serve:ssr:ts": "./node_modules/.bin/ts-node -P ./tsconfig.server.json ./server.ts",
         "build:client-and-server-bundles": "ng build --prod && ng run angular-graphql:server:production --bundleDependencies all"
     },
     "private": true,
@@ -38,6 +38,7 @@
         "apollo-cache-inmemory": "^1.3.2",
         "apollo-client": "^2.6.0",
         "apollo-link": "^1.2.11",
+        "apollo-link-context": "^1.0.18",
         "apollo-server": "^2.6.1",
         "express": "^4.15.2",
         "graphql-tag": "^2.10.0",
